# KelpieTipping

./: .gitignore  Cargo.toml  build.rs
resources/: resources.gresource.xml  round_dialog.ui  round_panel.ui  round_view.ui  style.css  team_dialog.ui  team_view.ui  tipper_dialog.ui  tipper_view.ui  window.ui
resources/sql/: schema.sql
src/: main.rs
src/event/: mod.rs
src/model/: game.rs  mod.rs  round.rs  team.rs  tip.rs  tipper.rs
src/preference/: mod.rs
src/util/: date.rs  db.rs  game_allocator.rs  info.rs  mod.rs  test_utils.rs
src/window/: edit_round.rs  edit_team.rs  edit_tipper.rs  imp.rs  mod.rs  round_view.rs  team_view.rs  tipper_view.rs  util.rs
