[package]
name = "KelpieTipping"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.3.1"
async-std = "1.13.0"
chrono = "0.4.38"
dirs-next = "2.0.0"
gtk = { version = "0.9", package = "gtk4", features = ["v4_14"] }
adw = { version = "0.7.2", package = "libadwaita", features = ["v1_5"] }
gettext-rs = { version = "0.7", features = ["gettext-system"]}
home = "0.5.9"
log = "0.4"
preferences = "2.0.0"
rolling-file = "0.2.0"
simplelog = "0.12.2"
sqlx = { version = "0.8.5", features = ["runtime-async-std", "postgres"] }

[profile.release]
opt-level = 3

[build-dependencies]
glib-build-tools = "0.20.0"
